# tree_menu

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
core/: models.py
core/migrations/: 0001_initial.py  0002_remove_menuitem_position.py  0003_menuitem_position.py
core/templates/templatetags/: .menu.html.swp  menu.html
core/templatetags/: common_tags.py
menu_app/: models.py  settings.py  urls.py  views.py
menu_app/migrations/: 0001_initial.py  0002_alter_menu_url.py
menu_app/templates/: base.html  menu.html
menu_app/templatetags/: menu_tags.py
project_menu/: asgi.py  settings.py  urls.py  wsgi.py
