[tool.poetry]
name = "tree-menu-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tree_menu_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-mptt = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
