[tool.poetry]
name = "tree-menu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tree_menu"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
